[package]
name = "io_uring_mc_scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
io-uring = "0.6.2"
nix = { version = "0.27.1", default-features = false, features = ["socket", "net"] }
rand = "0.8.5"
gcd = "2.3.0"
craftping = "0.4.1"